의견수정 댓글수정 ui 추가

--- a/PC/css/style.css
+++ b/PC/css/style.css
@@ -1831,7 +1831,7 @@ h5 span.info {
 .write_box {
 	width: 100%;
 	border: 1px solid #e0e0e0;
-
+	border-bottom: 1px solid #eee;
 	background-color: #fff;
 }
 .write_box textarea {
