--- a/MOBILE/css/style.css
+++ b/MOBILE/css/style.css
@@ -108,7 +108,7 @@ a {
 input[type='search'] {
 	border: 1px solid #ccc;
 	border-radius: 20px;
-	padding: 0.7em 1em 0.7em 2em;
+	padding: 0.7em 1em 0.7em 2.1em;
 	box-sizing: border-box;
 	width: 17em;
 	-webkit-appearance: none;
@@ -118,6 +118,7 @@ input[type='search'] {
 	background-size: 1.5em;
 	background-repeat: no-repeat;
 	background-position: 0.5em center;
+	font-size: 14px;
 }
 
 .sort_view {
