--- a/MOBILE/css/style.css
+++ b/MOBILE/css/style.css
@@ -90,11 +90,6 @@ a {
 	width: 100%;
 }
 
-.board_header#sort {
-	margin: 0;
-	padding: 0;
-}
-
 .g_srch {
 	display: flex;
 	justify-content: space-between;
@@ -1364,7 +1359,7 @@ select:focus {
 
 /* 토론 */
 .wrap_discuss_list {
-	padding: 0 0 40px 0;
+	padding: 20px 0 40px 0;
 }
 .discuss_list {
 	text-align: left;
