--- a/ADMIN/assets/admin/css/admin.css
+++ b/ADMIN/assets/admin/css/admin.css
@@ -1369,6 +1369,12 @@ input[type='checkbox'] {
 	padding: 20px 0 10px 0;
 }
 
+.txt_reply pre {
+	border: none;
+	background: transparent;
+	padding: 0;
+	margin: 0;
+}
 .btn_reply {
 	cursor: pointer;
 }
