--- a/RelayBoard/PC/css/style.css
+++ b/RelayBoard/PC/css/style.css
@@ -19,15 +19,23 @@
 	src: url('../../font/GmarketSansMedium.woff') format('woff');
 }
 @font-face {
-	font-family: 'tvn_enjoystorieslight';
-	font-weight: normal;
-	src: url('../../font/tvn__light.woff') format('woff');
+	font-family: 'tvn';
+	font-weight: 100;
+	src: url('../../font/tvn.woff') format('woff');
+}
+@font-face {
+	font-family: 'nanummyeongjo';
+	font-weight: 100;
+	src: url('../../font/NanumMyeongjo.woff') format('woff');
 }
 
-@font-face {
-	font-family: 'tvn_enjoystorieslight';
-	font-weight: normal;
-	src: url('../../font/tvn__light.eot') format('eot');
+textarea {
+	overflow: auto;
+	outline: none;
+	resize: none;
+}
+input {
+	outline: none;
 }
 
 select {
@@ -40,15 +48,13 @@ select {
 	-moz-appearance: none;
 	-ms-appearance: none;
 	-o-appearance: none;
-	background: url(../../img/ic-down.svg) 330px 14px no-repeat;
+	background: url(../../img/ic-down.svg) 96% 46% no-repeat;
 	font-size: 16px;
+	outline: none;
 }
-
-/*
 select::-ms-expand {
-    display: none;
+	display: none;
 }
-*/
 
 .wrap {
 	width: 100%;
@@ -88,14 +94,16 @@ select::-ms-expand {
 .wrap-tit .tit {
 	font-size: 72px;
 	color: #b4985a;
-	font-family: 'GmarketSansBold';
+	font-family: 'GmarketSans';
 }
 .wrap-tit .subtit {
 	font-size: 60px;
-	font-family: 'tvn_enjoystorieslight';
+	font-family: 'tvn';
 }
 
-.wrap-list {
+.wrap-list,
+.wrap-article,
+.wrap-reply {
 	width: 1112px;
 	margin: 0 auto;
 }
@@ -132,7 +140,7 @@ select::-ms-expand {
 	padding: 26px;
 	position: relative;
 }
-.writer {
+.listbox .writer {
 	margin-bottom: 35px;
 	color: #666;
 }
@@ -149,19 +157,24 @@ select::-ms-expand {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	text-align: left;
-	height: 176px;
+	height: 180px;
 }
 
 .info {
 	position: absolute;
 	bottom: 26px;
 }
-.info .like {
-	background-image: url(../../img/ic_like.svg);
+.like {
+	background-image: url(../../img/ic-like.svg);
 	background-repeat: no-repeat;
 	padding: 0 16px 0 24px;
 }
-.info .num-reply {
+.like.on {
+	background-image: url(../../img/ic-like-on.svg);
+	background-repeat: no-repeat;
+	padding: 0 16px 0 24px;
+}
+.num-reply {
 	background-image: url(../../img/ic-reply.svg);
 	background-repeat: no-repeat;
 	padding: 0 130px 0 20px;
@@ -215,4 +228,227 @@ select::-ms-expand {
 .paging .now {
 	background-color: #777;
 	color: #fff;
+}
+
+.wrap-article {
+	background-color: #f5f5f5;
+	padding: 20px;
+	border: 1px solid #e9e9e9;
+}
+
+.tit-article {
+	font-size: 22px;
+	padding-bottom: 10px;
+	color: #999;
+	font-family: 'nanummyeongjo';
+}
+.txt-article {
+	width: 100%;
+	background-color: #fff;
+	padding: 30px;
+	text-align: center;
+	border-radius: 15px;
+	box-shadow: -1px 1px 5px 1px rgba(0, 0, 0, 0.1);
+}
+.txt-article p {
+	padding: 100px 50px;
+	font-size: 34px;
+	line-height: 150%;
+	font-family: 'nanummyeongjo';
+}
+.txt-start {
+	width: 100%;
+	text-align: left;
+	padding: 50px 0 0 50px;
+}
+.txt-end {
+	width: 100%;
+	text-align: right;
+	padding: 0px 50px 50px 0;
+}
+
+.etc-article {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+}
+
+.txt-article button {
+	border: 0;
+	padding: 6px 10px;
+	border-radius: 5px;
+	color: #999;
+}
+
+.wrap-info {
+	display: flex;
+	padding: 30px 0 10px 0;
+	color: #666;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
+/* 댓글 */
+.write-reply {
+	border: 3px solid #e0e0e0;
+	width: 100%;
+	margin: 30px 0;
+	text-align: right;
+	padding: 16px;
+}
+.write-reply textarea {
+	width: 100%;
+	height: 80px;
+	border: 0;
+	resize: none;
+	outline: none;
+	text-align: left;
+}
+.write-reply button {
+	border: 0;
+	background-color: transparent;
+	color: #b4985a;
+	font-weight: bold;
+}
+
+.reply {
+	width: 100%;
+	padding: 20px 0;
+	border-bottom: 1px solid #e0e0e0;
+}
+.reply .btns {
+	float: right;
+}
+.reply .date,
+.reply .btns,
+.reply .team {
+	color: #999;
+}
+.reply-writer {
+	padding: 8px 0;
+}
+.reply-writer .name {
+	font-weight: bold;
+	padding-right: 6px;
+}
+.txt-reply {
+	padding: 10px 0 20px 0;
+}
+.reply-edit {
+	border: 1px solid #e0e0e0;
+	text-align: right;
+	padding: 16px;
+}
+.reply-edit textarea {
+	width: 100%;
+	height: 80px;
+	text-align: left;
+	resize: none;
+	border: 0;
+}
+
+.reply-edit button {
+	border: 0;
+	background-color: transparent;
+	color: #b4985a;
+	font-weight: bold;
+}
+/* 팝업 */
+
+.wrap_layerpop {
+	position: fixed;
+	z-index: 9999;
+	background: rgba(0, 0, 0, 0.7);
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	text-align: center;
+}
+.wrap_layerpop::before {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+}
+.wrap-write {
+	display: inline-block;
+	vertical-align: middle;
+	height: auto;
+	width: 600px;
+	background: #fff;
+	text-align: center;
+	padding: 0 0 30px 0;
+}
+
+.wrap-login {
+	display: inline-block;
+	vertical-align: middle;
+	height: auto;
+	width: 400px;
+	background: #fff;
+	text-align: center;
+	padding: 0 0 30px 0;
+}
+.pop-header {
+	width: 100%;
+	padding: 15px 20px;
+	background-color: #b4985a;
+	color: #fff;
+	font-size: 16px;
+	font-weight: bold;
+	text-align: left;
+	box-sizing: border-box;
+}
+.pop-content {
+	padding: 50px 40px 25px;
+}
+.pop-content p {
+	padding-bottom: 30px;
+	line-height: 150%;
+}
+.pop-content input,
+.pop-content textarea {
+	width: 90%;
+	height: 40px;
+	padding: 0 10px;
+	border: 1px solid #e0e0e0;
+	text-align: left;
+	display: block;
+	margin: 0 auto;
+	box-sizing: border-box;
+	margin-top: 10px;
+	resize: none;
+}
+.pop-content textarea {
+	height: 160px;
+	padding: 10px;
+}
+.pop-content select {
+	width: 90%;
+	border: 1px solid #e0e0e0;
+	text-align: left;
+	display: block;
+	margin: 0 auto;
+	box-sizing: border-box;
+	margin-top: 10px;
+	height: 40px;
+	font-size: 14px;
+	color: #666;
+}
+.pop-content button {
+	width: 200px;
+	padding: 10px 0;
+	margin-top: 18px;
+	border: 1px solid #b4985a;
+	background-color: #fff;
+	color: #b4985a;
+	font-weight: bold;
+}
+.wrap-login .pop-content button {
+	width: 90%;
+}
+.pop-close {
+	float: right;
+	cursor: pointer;
 }
