--- a/RelayBoard/PC/css/style.css
+++ b/RelayBoard/PC/css/style.css
@@ -56,6 +56,19 @@ select::-ms-expand {
 	display: none;
 }
 
+button {
+	cursor: pointer;
+}
+
+button.normal {
+	border: none;
+	width: 180px;
+	height: 40px;
+	background-color: #b4985a;
+	color: #fff;
+	font-weight: bold;
+}
+
 .wrap {
 	width: 100%;
 }
@@ -79,6 +92,7 @@ select::-ms-expand {
 
 .header .status {
 	font-weight: bold;
+	cursor: pointer;
 }
 
 .wrap-content {
@@ -168,6 +182,7 @@ select::-ms-expand {
 	background-image: url(../../img/ic-like.svg);
 	background-repeat: no-repeat;
 	padding: 0 16px 0 24px;
+	cursor: pointer;
 }
 .like.on {
 	background-image: url(../../img/ic-like-on.svg);
@@ -355,7 +370,7 @@ select::-ms-expand {
 }
 /* 팝업 */
 
-.wrap_layerpop {
+.wrap-layerpop {
 	position: fixed;
 	z-index: 9999;
 	background: rgba(0, 0, 0, 0.7);
@@ -365,11 +380,14 @@ select::-ms-expand {
 	right: 0;
 	text-align: center;
 }
-.wrap_layerpop::before {
+.wrap-layerpop::before {
 	content: '';
 	display: inline-block;
 	height: 100%;
 	vertical-align: middle;
+}
+.hidden {
+	display: none;
 }
 .wrap-write {
 	display: inline-block;
