--- a/RelayBoard/MOBILE/css/style.css
+++ b/RelayBoard/MOBILE/css/style.css
@@ -82,6 +82,29 @@ button.normal {
 .wrap {
 	width: 100%;
 }
+.poster {
+	background-color: #e7f4ee;
+}
+.poster img {
+	width: 100%;
+}
+
+.wrap-btn {
+	width: 100%;
+	height: 25vh;
+	background-color: #e7f4ee;
+	text-align: center;
+	padding: 20px 0 70px;
+}
+.wrap-btn button {
+	width: 90vw;
+	height: 48px;
+	font-size: 18px;
+	border: 0;
+	background-color: #000;
+	color: #fff;
+	font-weight: bold;
+}
 .wrap-header {
 	width: 100%;
 
@@ -228,7 +251,7 @@ button.normal {
 }
 .txt-article p {
 	padding: 30px 10px;
-	font-size: 20px;
+	font-size: 24px;
 	line-height: 150%;
 	font-family: 'nanummyeongjo';
 }
