--- a/RelayBoard/PC/css/style.css
+++ b/RelayBoard/PC/css/style.css
@@ -89,9 +89,9 @@ button.normal {
 	padding: 80px 0 150px;
 }
 .wrap-btn button {
-	font-size: 20px;
-	width: 300px;
-	height: 56px;
+	font-size: 24px;
+	width: 360px;
+	height: 80px;
 	background-color: #000;
 }
 .header {
@@ -114,12 +114,12 @@ button.normal {
 }
 
 .wrap-content {
-	width: 100%;
-	padding-bottom: 50px;
-}
-.wrap-tit {
 	width: 1112px;
 	margin: 0 auto;
+	padding-bottom: 50px;
+}
+
+.wrap-tit {
 	text-align: center;
 	padding: 88px 0;
 }
@@ -136,9 +136,9 @@ button.normal {
 .wrap-list,
 .wrap-article,
 .wrap-reply {
-	width: 1112px;
-	margin: 0 auto;
+	width: 100%;
 }
+
 .wrap-list select {
 	width: 360px;
 	height: 40px;
@@ -162,8 +162,16 @@ button.normal {
 	width: 100%;
 	justify-content: space-between;
 	align-content: space-between;
-	height: 1132px;
-	padding-top: 20px;
+	height: 1112px;
+	margin-top: 20px;
+}
+.nothing {
+	background-color: #f6f6f6;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	color: #666;
+	font-size: 16px;
 }
 .listbox {
 	width: 360px;
@@ -321,11 +329,22 @@ button.normal {
 	align-items: flex-start;
 }
 
+.btn-list {
+	text-align: right;
+	padding: 20px 0 0 0;
+}
+.btn-list button {
+	padding: 6px 10px;
+	background-color: #fff;
+	border-radius: 5px;
+	border: 1px solid #c4c4c4;
+	color: #999;
+}
 /* 댓글 */
 .write-reply {
 	border: 3px solid #e0e0e0;
 	width: 100%;
-	margin: 30px 0;
+	margin: 50px 0 30px 0;
 	text-align: right;
 	padding: 16px;
 }
