--- a/PC/css/style.css
+++ b/PC/css/style.css
@@ -242,7 +242,7 @@ textarea:-mos-input-placeholder {
 }
 
 .date {
-	width: 76px;
+	width: 80px;
 	float: left;
 	text-align: center;
 	color: #333;
@@ -1614,6 +1614,15 @@ input[type='checkbox']:checked + label span::before {
 
 .article_discuss {
 	padding: 60px 30px;
+}
+
+.wrap_article {
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+.wrap_article img {
+	width: 100%;
 }
 
 h5 {
